@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-09-25T02:37:39Z",
+  "timestamp" : "2022-09-25T08:29:41Z",
   "count_outdated" : 509,
   "uniques_outdated" : 325,
-  "count" : 542,
+  "count" : 541,
   "uniques" : 347,
   "clones" : [
     {
       "timestamp": "2022-09-11T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 2, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-09-12T00:00:00Z",
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-09-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
