@@ -1,11 +1,11 @@
 {
-  "count": 33,
+  "count": 32,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-09-11T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-12T00:00:00Z",
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2022-09-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
