@@ -1,3 +1,11 @@
+2022-09-25T08:29:41Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3121477731
+* notice: last 14d: unq all: 2 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 325 509 / 347 542
+* notice: next accum: outdated-unq outdated-all / unq all: 325 509 / 347 541
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-11 2022-09-25]
+
 2022-09-25T02:37:39Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3120616955
 * notice: last 14d: unq all: 2 33
